--- a/notebooks/visualise.ipynb
+++ b/notebooks/visualise.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dashboard(\"agage\", mode=\"markers\")"
+    "dashboard(\"agage_test\", mode=\"markers\")"
    ]
   },
   {
@@ -51,7 +51,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
